# Odyssey

./: .deepsource.toml  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PUBLISH.md  README.md  TODO.md  codecov.yml  compose.yaml  install.sh  lefthook.yml
.devin/: wiki.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: refactor-request.md
.github/workflows/: ci-chek.yml  coverage.yml  docs.yml  release.yml
bundles/hello-world/: agent.yaml  odyssey.bundle.json5
bundles/odyssey-agent/: agent.yaml  odyssey.bundle.json5
configs/: README.md  odyssey.json5
configs/skills/: README.md
crates/odyssey-rs/: Cargo.toml
crates/odyssey-rs-bundle/: Cargo.toml
crates/odyssey-rs-bundle/src/: build.rs  client.rs  constants.rs  distribution.rs  layout.rs  lib.rs  reference.rs  store.rs  test_support.rs
crates/odyssey-rs-bundle/tests/: distribution.rs
crates/odyssey-rs-config/: Cargo.toml
crates/odyssey-rs-config/src/: error.rs  lib.rs  model.rs
crates/odyssey-rs-config/src/loader/: layer_io.rs  merge.rs  mod.rs  schema.rs  tests.rs  utils.rs
crates/odyssey-rs-core/: Cargo.toml
crates/odyssey-rs-core/src/: error.rs  instructions.rs  lib.rs  memory.rs  permission_store.rs  permissions.rs  skills.rs  state.rs  tools.rs  types.rs
crates/odyssey-rs-core/src/agent/: builder.rs  llm.rs  memory.rs  mod.rs  tool_messages.rs
crates/odyssey-rs-core/src/orchestrator/: agent_factory.rs  memory.rs  mod.rs  prompt.rs  registry.rs  runtime.rs  sessions.rs  tool_context.rs
crates/odyssey-rs-core/tests/: orchestrator.rs  permissions.rs  sessions.rs  skills.rs
crates/odyssey-rs-manifest/: Cargo.toml
crates/odyssey-rs-manifest/src/: agent_spec.rs  bundle_manifest.rs  lib.rs  loader.rs  reference.rs
crates/odyssey-rs-memory/: Cargo.toml
crates/odyssey-rs-memory/src/: error.rs  lib.rs  model.rs  policy.rs  provider.rs  recall.rs
crates/odyssey-rs-protocol/: Cargo.toml
crates/odyssey-rs-protocol/src/: lib.rs  skill.rs  tool.rs
crates/odyssey-rs-runtime/: Cargo.toml
crates/odyssey-rs-runtime/configs/: README.md  default_agent.yaml  odyssey.bundle.json5
crates/odyssey-rs-runtime/src/: bundle.rs  config.rs  lib.rs  runtime_config.rs
crates/odyssey-rs-runtime/src/agent/: executor.rs
crates/odyssey-rs-runtime/src/resolver/: llm.rs
crates/odyssey-rs-runtime/src/runtime/: engine.rs  executor.rs  history.rs  mod.rs  resolver.rs  scheduler.rs  tool_event.rs
crates/odyssey-rs-runtime/src/sandbox/: bridge.rs  mod.rs
crates/odyssey-rs-runtime/src/session/: approval.rs  store.rs
crates/odyssey-rs-runtime/src/tool/: router.rs
crates/odyssey-rs-runtime/src/utils/: bundle_id.rs
crates/odyssey-rs-sandbox/: Cargo.toml
crates/odyssey-rs-sandbox/benches/: sandbox_run.rs
crates/odyssey-rs-sandbox/src/: error.rs  lib.rs  runner.rs  runtime.rs  types.rs
crates/odyssey-rs-sandbox/src/provider/: linux.rs  local.rs  mod.rs  noop.rs
crates/odyssey-rs-sandbox/tests/: policy.rs
crates/odyssey-rs-server/: Cargo.toml
crates/odyssey-rs-server/src/: app.rs  main.rs  models.rs  routes.rs  sse.rs
crates/odyssey-rs-test-utils/: Cargo.toml
crates/odyssey-rs-test-utils/src/: agent.rs  context.rs  lib.rs  llm.rs  memory.rs  skills.rs  tools.rs
crates/odyssey-rs-tools/: Cargo.toml
crates/odyssey-rs-tools/src/: adaptor.rs  context.rs  events.rs  lib.rs  mcp.rs  output_policy.rs  permissions.rs  question.rs  registry.rs  tool.rs  web.rs
crates/odyssey-rs-tools/src/builtins/: bash.rs  filesystem.rs  mod.rs  question.rs  skill.rs  utils.rs  web.rs
crates/odyssey-rs-tools/tests/: tools.rs
crates/odyssey-rs-tui/: Cargo.toml  README.md
crates/odyssey-rs-tui/src/: app.rs  cli.rs  client.rs  event.rs  event_bus.rs  lib.rs  llm.rs  main.rs  spawn.rs  terminal.rs  ui.rs
crates/odyssey-rs-tui/src/app/: events.rs  render.rs  scroll.rs  state.rs  types.rs
crates/odyssey-rs-tui/src/handlers/: input.rs  mod.rs  model.rs  session.rs  slash.rs
crates/odyssey-rs-tui/src/ui/: markdown.rs  mod.rs
crates/odyssey-rs-tui/src/ui/widgets/: header.rs  hero.rs  slash_palette.rs  viewer.rs
crates/odyssey-rs/src/: cli.rs  lib.rs  remote.rs
docs/: README.md  book.toml
docs/content/: index.mdx
docs/content/guides/: getting-started.mdx
docs/content/reference/: bundle-format.mdx  cli-and-server.mdx  sandbox-and-tools.mdx
docs/content/runtime/: architecture.mdx  runtime-model.mdx
docs/executable-skills/: README.md
docs/src/: README.md  SUMMARY.md  architecture-runtime.md  architecture.md  bundle-format.md  config.md  crates.md  getting-started.md  odyssey.json5  overview.md  permissions.md  quickstart.md  runtime-model.md  sandbox-and-tools.md  skills.md  tui.md
examples/events/: Cargo.toml  odyssey.json5
examples/events/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/streaming/: Cargo.toml
examples/streaming/src/: main.rs
