[package]
name = "odyssey-rs-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-protocol.workspace = true
anyhow.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
globset.workspace = true
json5 = "1.3.0"
log.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
pretty_assertions = "1.4.1"
