[package]
name = "odyssey-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-config.workspace = true
odyssey-rs-memory.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-sandbox.workspace = true
odyssey-rs-tools.workspace = true

autoagents-core = { workspace = true }
autoagents-llm = { workspace = true, features = ["openai"] }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
regex.workspace = true
directories.workspace = true
globset.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
pretty_assertions = "1.4.1"
odyssey-rs-test-utils.workspace = true
