[package]
name = "odyssey-rs-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
regex.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
pretty_assertions = "1.4.1"
tokio.workspace = true
