[package]
name = "odyssey-rs-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-config.workspace = true
odyssey-rs-protocol.workspace = true
async-trait.workspace = true
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
parking_lot.workspace = true
which.workspace = true
libc.workspace = true
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
pretty_assertions = "1.4.1"
criterion = "0.8.2"

[[bench]]
name = "sandbox_run"
harness = false

[[bin]]
name = "odyssey-rs-sandbox-cli"
path = "src/bin/odyssey-rs-sandbox-cli.rs"

[[bin]]
name = "odyssey-rs-sandbox-internal-landlock-helper"
path = "src/bin/odyssey-rs-sandbox-internal-landlock-helper.rs"
