[package]
name = "odyssey-rs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-config.workspace = true
odyssey-rs-core.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-tools.workspace = true
odyssey-rs-memory.workspace = true
autoagents-core.workspace = true
autoagents-llm.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rocket.workspace = true
rocket_ws.workspace = true
env_logger.workspace = true
log.workspace = true
