[package]
name = "odyssey-rs-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-sandbox.workspace = true
odyssey-rs-protocol.workspace = true
autoagents-core.workspace = true
autoagents-derive.workspace = true

async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
globset.workspace = true
walkdir.workspace = true
log.workspace = true
shell-words = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio.workspace = true
tempfile = "3.10.1"
