[package]
name = "odyssey-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[features]
default = []
logging = ["dep:env_logger"]

[dependencies]
odyssey-rs-core.workspace = true
odyssey-rs-config.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-memory.workspace = true

autoagents-llm = { workspace = true, features = ["openai", "ollama"] }

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
async-trait.workspace = true
uuid.workspace = true
env_logger = { workspace = true, optional = true }
